# platform-gitops

./: .gitignore
.github/workflows/: ci-app.yml  tf-apply.yml  tf-plan.yml
apps/task-api/: .dockerignore  Dockerfile  pyproject.toml
apps/task-api/src/task_api/: __init__.py  main.py
apps/task-api/tests/: test_tasks.py
docs/: architecture.md  runbook.md
gitops/environments/dev/task-api/: application.yaml  values-dev.yaml
helm/task-api/: Chart.yaml  values.yaml
helm/task-api/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  secretproviderclass.yaml  service.yaml  serviceaccount.yaml
monitoring/alerts/: task-api-rules.yaml
monitoring/dashboards/: task-api-dashboard.json
scripts/: bootstrap.py  cost-check.py
terraform/environments/dev/: backend.tf  main.tf  variables.tf
terraform/modules/acr/: main.tf  outputs.tf  variables.tf
terraform/modules/aks/: main.tf  outputs.tf  variables.tf
terraform/modules/keyvault/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
