[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task-api"
version = "0.1.0"
description = "Demo microservice — platform-gitops"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",        # async test client
    "ruff>=0.4",          # linter
    "mypy>=1.10",
]

[project.scripts]
task-api = "task_api.main:app"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
